# GoIT_WEB_HW_9

./: README.md  authors.json  config.ini  connect.py  main.py  models.py  pyproject.toml  upload_to_DB.py
